<resources>
    <string name="app_name">MyFirstapp</string>
    <string name="header_text">Information</string>
    <string name="user_placeholder">User Name</string>
    <string name="userEmail_placeholder">User Email</string>
    <string name="userPassword_placeholder">User Password</string>
    <string name="userContact_placeholder">Contact Number</string>
    <string name="age_placeholder">Select Age:</string>
    <string name="Next_btn">Next</string>
    <string name="valid_fields">All fields are required!</string>
    <string name="valid_username">username field cannot be empty</string>
    <string name="valid_email">Invalid Email Address!</string>
    <string name="valid_password">Password must be at least 6 characters!</string>
    <string name="valid_contactNumber">Contact Number must be 10 digits!</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="authorize_text">Authorize</string>
    <string name="info_text">By Using Grant Type Password you will not able to use User Management</string>
    <string name="info1_text">admin@cpi.com</string>
    <string name="info2_text">Admin@123</string>
    <string name="info3_text">9a117930b32f43c084775639fc8f6728</string>
    <string name="info4_text">K8REuZ3bnxsFpSGQpExM4CtjBTmGwPWF</string>

</resources>