<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/backgroundColor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_text"
                android:textColor="@color/headerColor"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="20dp"
                />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <EditText
            android:id="@+id/UserNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_placeholder"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/UserEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userEmail_placeholder"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/UserPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userPassword_placeholder"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/ContactNumberId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userContact_placeholder"
            android:inputType="phone"
            android:padding="12dp"
            android:layout_marginTop="12dp" />
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>